--- a/src/components/UI/Card.module.css
+++ b/src/components/UI/Card.module.css
@@ -6,4 +6,8 @@
     background-color: white;
     top: 100px;
     z-index: 900;
+    margin-top: 7rem;
+    width: 25rem;
+    margin-left: 5rem;
+    height: 35rem;
   }
